--- a/input.css
+++ b/input.css
@@ -76,7 +76,7 @@
     object-fit: cover;
 }
 
-body {
+html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
